
20070104: Removed the VOLA module and replaced the CV and VOLR functions with new CUS versions in the
          CUS_examples section.

20070105: Fixed bug in CUS that included comment lines as variables for input parms.

20070105: Applied patch #1629088 - dev.html - thanks to loh_tar for the patch.

20070105: Applied patch #1629083 - add-nav script - thanks to loh_tar for the patch.

20070105: Applied patch #1629075 - mainchart.html - thanks to loh_tar for the patch.

20070105: Applied patch #1629066 - workwithscanner.html - thanks to loh_tar for the patch.

20070105: Applied patch #1629449 - quotes.html - thanks to loh_tar for the patch.

20070106: Moved preferences dialog into qtstalkerlib. Preferences now update whenever the apply button is
          pressed. Dialog is now non-modal.

20070107: Fixed copy CUS examples for new installs.

20070107: Fixed 0.33/0.34 dialog reappearing.

20070107: Fixed bug that segfaults if indicator is enabled with no chart loaded.

20070107: Fixed edit chart to update changes when dialog exited.

20070107: Fixed volume adjusted when stock is split.

20070107: Applied patch #1630082 - horizontalline.html - thanks to loh_tar for the patch.

20070107: Fixed chart objects dont adjust along with a stock split. However FiboLine can only be adjusted if both
          the start and end points fall within the adjusted range.
          
20070108: Applied patch #1630165 - chartobjects.html - thanks to loh_tar for the patch.

20070109: Added an exchange field to charts.

20070111: Fixed bug #1633007 - Yahoo Quotes, Error after add new Stock.

20070125: Yahoo has changed the historical date format to YYYY-MM-DD and now mixes the old and new randomly it appears.
          Yahoo plugin now handles both formats.

20070125: Applied patch #1640810 - Chart fixed at the right hand side - thanks to loh_tar for the patch

20070125: Applied patch #1637852 - new icon offer for "delete group" - thanks to loh_tar for the patch


