@@ -199,7 +199,7 @@ void FiboLine::prefDialog ()
   dialog->setCaption(tr("Edit FiboLine"));
   dialog->createPage (pl);
   dialog->setHelpFile (helpFile);
-  dialog->addColorItem(cl, pl, color);
+  dialog->addColorPrefItem(cl, pl, color);
   dialog->addDoubleItem(hl, pl, getHigh());
   dialog->addDoubleItem(ll, pl, getLow());
   dialog->addCheckItem(el, pl, extend);
