@@ -131,7 +131,7 @@ void HorizontalLine::prefDialog ()
   dialog->setCaption(tr("Edit HorizontalLine"));
   dialog->createPage (pl);
   dialog->setHelpFile (helpFile);
-  dialog->addColorItem(cl, pl, color);
+  dialog->addColorPrefItem(cl, pl, color);
   dialog->addDoubleItem(vl, pl, getValue());
   dialog->addTextItem(tx, pl, text);  //cz odkazy na objekty definovane nahore
   dialog->addCheckItem(sd, pl, FALSE);
