@@ -188,7 +188,7 @@ void TrendLine::prefDialog ()
   dialog->setCaption(tr("Edit TrendLine"));
   dialog->createPage (pl);
   dialog->setHelpFile (helpFile);
-  dialog->addColorItem(cl, pl, color);
+  dialog->addColorPrefItem(cl, pl, color);
   dialog->addComboItem(bf, pl, l, bar);
   dialog->addCheckItem(ub, pl, usebar);
   dialog->addCheckItem(el, pl, extend);
